--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,7 +4,7 @@
 <h1>Menú</h1>
 <ul>
     <li><a href="/catalogo">Catálogo para pantallas</a></li>
-    <li><a href="#">Login admin</a></li>
+    <li><a href="/login">Login admin</a></li>
 
     <li><a href="#">Control por QR (esto desp lo sacamos)</a></li>
     <li><a href="#">Probador virtual (esto desp lo sacamos)</a></li>
