--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -3,6 +3,7 @@
 <head>
     <title>VDI</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/layout.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/fonts.css') }}">
 </head>
 <body>
     <header>
