--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 <h1>Menú</h1>
 <ul>
-    <li><a href="{{url_for('main.catalogo', categoria='categoria1') }}">Catálogo para pantallas</a></li>
+    <li><a href="{{url_for('main.catalogo', categoria='categoria1', indice_central = 0) }}">Catálogo para pantallas</a></li>
     <li><a href="#">Login admin</a></li>
 
     <li><a href="#">Control por QR (esto desp lo sacamos)</a></li>
