--- a/app/static/css/catalogo.css
+++ b/app/static/css/catalogo.css
@@ -98,3 +98,73 @@ div.filtros{
     font-size: 25px;
     font-weight: 700;
 }
+
+.imagen_producto{/*esta es la imagen principal*/
+    position: relative;
+    margin: auto;
+    margin-top: 2%;
+    width: 90%;
+    aspect-ratio: 1/1;
+    /*
+    width: min(90%, 60vh);
+    height: min(90vw, 60%);
+    overflow: hidden;*/
+}
+
+.imagen_producto img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /*recorta centrando la imagen*/
+    object-position: center;
+
+}
+
+.bloque_flecha_descripcion{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.descripcion{
+    width: 70%;
+}
+#aclaracion_prod{
+    color: #40A629;
+}
+.flecha_derecha {
+    width: 0;
+    height: 0;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
+    border-left: 20px solid black; /* color de la flecha */
+    margin-left: 5%;
+}
+
+.flecha_izquierda {
+    width: 0;
+    height: 0;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
+    border-right: 20px solid black;
+    margin-right: 5%;
+}
+
+.selector_producto{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: auto;
+    margin-bottom: 40px;
+    flex-wrap: wrap;
+    gap: 2%;
+}
+
+
+.imagen_selector{
+    width: 15%;
+    aspect-ratio: 1/1;
+   /* margin-right: 2%;
+    margin-left: 2%;*/
+    margin-top: 20px;
+}
