--- a/app/templates/catalogo.html
+++ b/app/templates/catalogo.html
@@ -8,70 +8,39 @@
 {% block content %}
 <div class="filtros">
   <ul class="nav nav-tabs" id="tabsCatalogo" role="tablist">
+    {% for categoria in categorias %}
     <li class="nav-item" role="presentation">
-      <button class="nav-link active" id="tab1-tab" data-bs-toggle="tab" data-bs-target="#tab1" type="button" role="tab">Pestaña 1</button>
+      <button class="nav-link {%if loop.first%} active {%endif%}" id="tab{{categoria.category_id}}-tab" data-bs-toggle="tab" data-bs-target="#tab{{categoria.category_id}}" type="button" role="tab">Categoría {{categoria.category_id}}</button>
     </li>
-    <li class="nav-item" role="presentation">
-      <button class="nav-link" id="tab2-tab" data-bs-toggle="tab" data-bs-target="#tab2" type="button" role="tab">Pestaña 2</button>
-    </li>
-    <li class="nav-item" role="presentation">
-      <button class="nav-link" id="tab3-tab" data-bs-toggle="tab" data-bs-target="#tab3" type="button" role="tab">Pestaña 3</button>
-    </li>
-    <li class="nav-item" role="presentation">
-      <button class="nav-link" id="tab4-tab" data-bs-toggle="tab" data-bs-target="#tab4" type="button" role="tab">Pestaña 4</button>
-    </li>
+    {% endfor %}
   </ul>
 
 </div>
 
 <div class="tab-content px-5" id="tabsCatalogoContent">
-    <div class="tab-pane fade show active" id="tab1" role="tabpanel">
+    {% for categoria in categorias %}
+    <div class="tab-pane fade show {% if loop.first %} active {% endif %}" id="tab{{categoria.category_id}}" role="tabpanel">
         <div class="tab-content px-5" id="tabsCategoriaContent">
-            <div class="tab-pane fade show active" id="subtab1" role="tabpanel">
-                <div class="card" style="width: 100%;">
-                    <img src="https://www.svgrepo.com/show/508699/landscape-placeholder.svg" class="card-img-top selected" alt="Imagen de ejemplo">
-                    <div class="card-body">
-                        <h2 class="card-title">Nombre modelo</h2>
-                        <h6>Precio $$</h6>
-                        <p class="card-text">Este es un texto de ejemplo para describir el contenido del modelo. </p>
-                        <a href="#" class="btn btn-outline-primary">Probarlos</a>
+            {% for producto in categoria.productos %}
+            <div class="tab-pane fade show {% if loop.first %} active {% endif %}" id="subtab{{producto.product_id}}" role="tabpanel">
+                
+                <div class="producto">
+                    <div class="imagen_producto">
+                        <img id="imagen_principal" src = "https://www.svgrepo.com/show/508699/landscape-placeholder.svg">
+                    </div>
+                    <div class = "bloque_flecha_descripcion">
+                        
+                        <div class="descripcion">
+                            <h2 id="nombre_prod">{{producto.model}}</h2>
+                            <h3 id="precio_prod">${{producto.price}}</h3>
+                            <p id="aclaracion_prod">{{producto.sku}}</p>
+                            <p id="descripcion_prod">{{producto.descripcion.name}}</p>
+                        </div>
+                        
                     </div>
                 </div>
             </div>
-
-            <div class="tab-pane fade show" id="subtab2" role="tabpanel">
-                <div class="card" style="width: 100%;">
-                    <img src="https://www.svgrepo.com/show/508699/landscape-placeholder.svg" class="card-img-top selected" alt="Imagen de ejemplo">
-                    <div class="card-body">
-                        <h2 class="card-title">Nombre modelo 2</h2>
-                        <h6>Precio $$</h6>
-                        <p class="card-text">Este es un texto de ejemplo para describir el contenido del modelo. </p>
-                        <a href="#" class="btn btn-outline-primary">Probarlos</a>
-                    </div>
-                </div>
-            </div>
-            <div class="tab-pane fade show" id="subtab3" role="tabpanel">
-                <div class="card" style="width: 100%;">
-                    <img src="https://www.svgrepo.com/show/508699/landscape-placeholder.svg" class="card-img-top selected" alt="Imagen de ejemplo">
-                    <div class="card-body">
-                        <h2 class="card-title">Nombre modelo 3</h2>
-                        <h6>Precio $$</h6>
-                        <p class="card-text">Este es un texto de ejemplo para describir el contenido del modelo. </p>
-                        <a href="#" class="btn btn-outline-primary">Probarlos</a>
-                    </div>
-                </div>
-            </div>
-            <div class="tab-pane fade show" id="subtab4" role="tabpanel">
-                <div class="card" style="width: 100%;">
-                    <img src="https://www.svgrepo.com/show/508699/landscape-placeholder.svg" class="card-img-top selected" alt="Imagen de ejemplo">
-                    <div class="card-body">
-                        <h2 class="card-title">Nombre modelo 4</h2>
-                        <h6>Precio $$</h6>
-                        <p class="card-text">Este es un texto de ejemplo para describir el contenido del modelo. </p>
-                        <a href="#" class="btn btn-outline-primary">Probarlos</a>
-                    </div>
-                </div>
-            </div>
+            {% endfor %}
         </div>
 
         <div class="slider-container">
@@ -79,37 +48,14 @@
 
             <div class="tabsCategoria-wrapper">
                 <ul class="nav nav-tabs tabsCategoria py-3" role="tablist">
+                {% for producto in categoria.productos %}
                 <li class="nav-item" role="presentation">
-                    <button class="nav-link active" id="subtab1-tab" data-bs-toggle="tab" data-bs-target="#subtab1" type="button" role="tab">
-                    <img src="https://www.svgrepo.com/show/508699/landscape-placeholder.svg" class="card-img-top" style="height: 60px;" alt="Imagen 1">
+                    <button class="nav-link  {% if loop.first %} active {% endif %}" id="subtab{{producto.product_id}}-tab" data-bs-toggle="tab" data-bs-target="#subtab{{producto.product_id}}" type="button" role="tab">
+                    <img src="https://www.svgrepo.com/show/508699/landscape-placeholder.svg" class="card-img-top" style="height: 60px;" alt="Imagen {{producto.model}}">
                     </button>
                 </li>
-                <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="subtab2-tab" data-bs-toggle="tab" data-bs-target="#subtab2" type="button" role="tab">
-                    <img src="https://www.svgrepo.com/show/508699/landscape-placeholder.svg" class="card-img-top" style="height: 60px;" alt="Imagen 2">
-                    </button>
-                </li>
-                <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="subtab3-tab" data-bs-toggle="tab" data-bs-target="#subtab3" type="button" role="tab">
-                    <img src="https://www.svgrepo.com/show/508699/landscape-placeholder.svg" class="card-img-top" style="height: 60px;" alt="Imagen 3">
-                    </button>
-                </li>
-                <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="subtab4-tab" data-bs-toggle="tab" data-bs-target="#subtab4" type="button" role="tab">
-                    <img src="https://www.svgrepo.com/show/508699/landscape-placeholder.svg" class="card-img-top" style="height: 60px;" alt="Imagen 4">
-                    </button>
-                </li>
+                {% endfor %}
                 
-                <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="subtab3-tab" data-bs-toggle="tab" data-bs-target="#subtab3" type="button" role="tab">
-                    <img src="https://www.svgrepo.com/show/508699/landscape-placeholder.svg" class="card-img-top" style="height: 60px;" alt="Imagen 3">
-                    </button>
-                </li>
-                <li class="nav-item" role="presentation">
-                    <button class="nav-link" id="subtab4-tab" data-bs-toggle="tab" data-bs-target="#subtab4" type="button" role="tab">
-                    <img src="https://www.svgrepo.com/show/508699/landscape-placeholder.svg" class="card-img-top" style="height: 60px;" alt="Imagen 4">
-                    </button>
-                </li>
                 </ul>
             </div>
 
@@ -118,14 +64,13 @@
 
     
     </div>
-    <div class="tab-pane fade" id="tab2" role="tabpanel">Contenido de la pestaña 2.</div>
-    <div class="tab-pane fade" id="tab3" role="tabpanel">Contenido de la pestaña 3.</div>
-    <div class="tab-pane fade" id="tab4" role="tabpanel">Contenido de la pestaña 4.</div>
+    {% endfor %}
 </div>
 
 
-<div class="position-fixed bottom-0 start-0 w-100 qrContainer">
-    <p>Escaneá el QR para navegar por el catálogo y probarte los modelos</p>
+<div class="position-fixed bottom-0 start-0 w-100 qrContainer d-flex align-items-center justify-content-between px-3 py-4">
+    <p class="mb-0">Escaneá el QR para navegar por el catálogo y probarte los modelos</p>
+    <img src="{{ url_for('main.qr') }}" alt="QR dinámico" style="height: 200px;">
 </div>
 
 
@@ -142,6 +87,18 @@
 
   btnRight.addEventListener('click', () => {
     wrapper.scrollBy({ left: 200, behavior: 'smooth' });
+  });
+</script>
+
+<script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
+<script>
+  const socket = io();
+
+  socket.on("actualizar_catalogo", data => {
+    console.log("Cambiar a:", data);
+    // acá hacés click programático en el tab correspondiente
+    document.getElementById("tab" + data.categoria + "-tab").click();
+    document.getElementById("subtab" + data.producto + "-tab").click();
   });
 </script>
 
