--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
     <li><a href="/catalogo">Catálogo para pantallas</a></li>
     <li><a href="/login">Login admin</a></li>
 
-    <li><a href="#">Control por QR (esto desp lo sacamos)</a></li>
+    <li><a href="/control">Control por QR (esto desp lo sacamos)</a></li>
     <li><a href="#">Probador virtual (esto desp lo sacamos)</a></li>
     
     <li><a href="#" target="_blank">E-commerce institucional</a></li>
