--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <img src="{{ url_for('static', filename='images/logo-optica 1.png') }}">
+        <a href="/"><img src="{{ url_for('static', filename='images/logo-optica 1.png') }}"></a>
       </header>
     
       <main>
