--- a/app/templates/control.html
+++ b/app/templates/control.html
@@ -37,7 +37,7 @@
       if (modo == 1){
         socket.emit("mover_categoria", {direccion: direccion});
       }else{
-        socket.emit("mover_catalogo", { direccion });
+        socket.emit("mover_producto", { direccion });
       }
     }
   }
